Added a new subtitle for People tab

--- a/app/setup-process/setup-process.html
+++ b/app/setup-process/setup-process.html
@@ -55,6 +55,10 @@
           Click on the map or insert them manually in the text fields.
       </td>
     </tr>
+  </table>
+
+  <h2>People Tab</h2>
+  <table>
     <tr class="item">
       <td>
         <p>Department</p>
