Upgrade to angular rc.1

--- a/app/contact/contact.html
+++ b/app/contact/contact.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" type="text/css" href="contact.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 
-<div class="bigAssWrapper">
+<div class="contact_wrapper">
   <h1>Contact CSC in the text field below if you have an errand.</h1>
   <h2>Don't forget to supply your email so that they can contact you.</h2>
 
