--- a/app/find-person/find-person.html
+++ b/app/find-person/find-person.html
@@ -3,7 +3,9 @@
 <div id="wrapper">
 
 	<div id="wrapper-persons">
+		<!-- 'Header' - Contains searchbar and information about the current search -->
 		<div id="person-header">
+			<!-- Searchbar, dropdown and search-button -->
 			<form action="search()" id="search-container">
 				<input type="text" [(ngModel)]="input" id="person-search-input" placeholder="Search for someone" autocomplete="off">
 				<div id="person-search-schools">
@@ -11,27 +13,33 @@
 				</div>
 				<button type="submit" (click)="search(input)" name="search_button" id="person-search-button"></button>
 			</form>
+			<!-- Dropdown menu with all schools and departments (initially hidden) -->
 			<div id="schools-wrapper" style="display: none">
+				<!-- List of all schools -->
 				<ul id="schools">
 					<li *ngFor="let school of schools" (click)="getDep(school)">
 						{{ school.school }}
 					</li>
 				</ul>
 				<div id="departments-wrapper" *ngIf="deps.length > 0">
+					<!-- Button for scrolling the departments list UP -->
 					<button (click)="scrollDep(-1)" *ngIf="deps.length > 14">
 						<p><mark>&#10095;</mark></p>
 					</button>
+					<!-- List of all departments -->
 					<ul id="departments" [ngStyle]="{'display': 'block'}">
 						<li *ngFor="let dep of deps" (click)="setDep(dep)">
 							{{ dep.name_sv }}
 						</li>
 					</ul>
+					<!-- Button for scrolling the departments list DOWN -->
 					<button (click)="scrollDep(1)" *ngIf="deps.length > 14">
 						<p><mark>&#10095;</mark></p>
 					</button>
 				</div>
 			</div>
 
+			<!-- Information about the current search -->
 			<br>
 			<h5 *ngIf="currentSearch.length == 0" id="search-input-string">Showing staff for {{ currentSchool }}</h5>
 			<h5 *ngIf="currentSearch.length > 0" id="search-input-string">Showing {{ people.length }} results for: {{ currentSearch }} at {{ currentSchool }}</h5>
@@ -43,6 +51,7 @@
 		</div>
 
 		<div *ngIf="!showErrorMessage">
+			<!-- Table displaying the current persons -->
 			<table id="person-table">
 				<thead>
 					<th></th>
@@ -63,8 +72,10 @@
 					</tr>
 				</tbody>
 			</table>
+			<!-- Popup window for the selected person -->
 			<person-profile [person]="currentPerson" [isOn]="isOn"></person-profile>
 		</div>
+		<!-- Padding -->
 		<div style="height:10rem"></div>
 	</div>
 </div>
