--- a/app/find-person/person-profile.html
+++ b/app/find-person/person-profile.html
@@ -7,7 +7,10 @@
 				<div class="popup-person-wrapper">
 					<p class="popup-person-name">{{ person.given_name }} {{ person.family_name }}</p>
 					<p class="popup-person-title">{{ person.title }}</p>
-					<p class="popup-person-status" *ngIf="person.status_info">Back on {{person.status_info.to}}</p>
+					<div>
+						<img style="float:left; margin-right: 8px" *ngIf="person.status_image" [src]="person.status_image" width="20" height="20" />
+						<p class="popup-person-status" *ngIf="person.status_info">Back on {{person.status_info.to}}</p>
+					</div>
 					<div class="popup-person-line"></div>
 
 					<table>
