removed ability to search within an entire school
forcing search within a certain department instead

--- a/app/find-person/find-person.html
+++ b/app/find-person/find-person.html
@@ -54,6 +54,7 @@
 			<!-- Table displaying the current persons -->
 			<table id="person-table">
 				<thead>
+					<th></th>
 					<th (click)="sort('firstname')"><p>Given name</p><mark id="firstname">&#10095;</mark></th>
 					<th (click)="sort('surname')"><p>Family name</p><mark id="surname">&#10095;</mark></th>
 					<th (click)="sort('email')"><p>Email</p><mark id="email">&#10095;</mark></th>
@@ -62,6 +63,7 @@
 				</thead>
 				<tbody id="person-table-body">
 					<tr *ngFor="let person of people; let i = index" (click)="setPerson(person)">
+						<td><img *ngIf="person.status_image" [src]="person.status_image" width="20" height="20" /></td>
 						<td>{{ person.given_name }}</td>
 						<td>{{ person.family_name }}</td>
 						<td>{{ person.email }}</td>
