--- a/app/contact/contact.html
+++ b/app/contact/contact.html
@@ -4,7 +4,7 @@
 <div class="contact_wrapper">
   <h1>If you need service or advice, contact CSC in the text field below</h1>
   <h2>Have you remembered to check if your answer could be found at intra.csc.kth.se?</h2>
-  <h2>Don't forget to supply your email so that they we contact you.</h2>
+  <h2>Don't forget to supply your email so that we can contact you.</h2>
 
   <form *ngIf="showForm" [ngFormModel]="form" (submit)="onSubmit(email.fromName, email.fromEmail, email.message)">
     <div class="wrapper">
