--- a/app/contact/contact.html
+++ b/app/contact/contact.html
@@ -2,9 +2,9 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 
 <div class="contact_wrapper">
-  <h1>Contact CSC in the text field below if you have an errand.</h1>
-  <h2>If you're looking for the KTH Intranet, it can be found on intra.kth.se</h2>
-  <h2>Don't forget to supply your email so that they can contact you.</h2>
+  <h1>If you need service or advice, contact CSC in the text field below</h1>
+  <h2>Have you remembered to check if your answer could be found at intra.csc.kth.se?</h2>
+  <h2>Don't forget to supply your email so that we can contact you.</h2>
 
   <form *ngIf="showForm" [ngFormModel]="form" (submit)="onSubmit(email.fromName, email.fromEmail, email.message)">
     <div class="wrapper">
