--- a/app/setup-process/setup-process.html
+++ b/app/setup-process/setup-process.html
@@ -62,7 +62,7 @@
       <td>
         <p>Department</p>
         <label>Choose school</label>
-        <select (change)="getDepartments($event.target.value)" style="width: 100%; padding: 0.2em">
+        <select id="select-school" (change)="getDepartments($event.target.value)" style="width: 100%; padding: 0.2em">
           <option>School</option>
           <option  *ngFor="let school of schools; let i = index" [value]="i">
             {{ school.school }}
@@ -239,10 +239,9 @@
     </tr>
 
   </table>
-
   <button  class="button" (click)="loadInformation()">Load</button>
   <button class="button" type="submit" (click)="saveInformation()">Save</button>
-
+  <div class="no_config_found" *ngIf="noConfigFound"><h3>No configuration data was found in localstorage</h3></div>
   <!-- Padding -->
   <div style="height: 20rem"></div>
 
