--- a/index.html
+++ b/index.html
@@ -8,28 +8,19 @@
     <script src="node_modules/systemjs/dist/system.src.js"></script>
     <script src="systemjs.config.js"></script>
     <!-- 1. Load libraries -->
-    <!-- IE required polyfills, in this exact order -->
-    <!-- Load the Angular router -->
-    <!--<script src="node_modules/angular2/bundles/router.dev.js"></script> -->
-
     <!-- Normalize.css -->
     <link rel="stylesheet" href="node_modules/normalize.css/normalize.css"/>
-
-   <!-- Angular HTTP -->
-  <!-- <script src="node_modules/angular2/bundles/http.dev.js"></script>-->
-
-   <!-- Angular RXJS -->
-   <script src="node_modules/rxjs/bundles/Rx.js"></script>
-   <!-- Leaflet -->
+    <!-- Angular RXJS -->
+    <script src="node_modules/rxjs/bundles/Rx.js"></script>
+    <!-- Leaflet -->
     <script src="node_modules/leaflet/dist/leaflet.js"></script>
     <link rel="stylesheet" href="node_modules/leaflet/dist/leaflet.css"/>
-
     <!-- jQuery  -->
     <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
 
     <!-- 2. Configure SystemJS -->
     <script>
-        System.import('app').catch(function(err){ console.error(err); });
+        System.import('app').catch(function(err){ console.error(err); location.reload(); });
       </script>
   </head>
   <!-- Used by the Angular router ... -->
