Settings saved in localstorage is now fetched automatically when navigation to the setup view.

--- a/app/main-frame/main-frame.html
+++ b/app/main-frame/main-frame.html
@@ -81,4 +81,4 @@
 <!-- Routed views go here -->
 <router-outlet></router-outlet>
 
-<footer id="footer"><div class="footer_text" ><h3>{{screenInfo.footer_text}}</h3></div></footer>
+<footer id="footer"><div class="footer_text" ><h3>{{screenInfo.school.footer_text}}</h3></div></footer>
