Home view is now displaying news feed and calendar events correctly

--- a/app/home/home.html
+++ b/app/home/home.html
@@ -19,7 +19,7 @@
 
 </div>
 <div class="calendar_block">
-	<div *ngIf="calendar_block" [innerHtml]="calendar_block"></div>
+	<div *ngIf="calendar_block" [innerHTML]="calendar_block"></div>
 	<div *ngIf="calendar_error">
 		<center>
 			<img src="app/find-person/images/Error-100.png"/>
