--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>CScreen</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+    
     <script src="node_modules/core-js/client/shim.min.js"></script>
     <script src="node_modules/zone.js/dist/zone.js"></script>
     <script src="node_modules/reflect-metadata/Reflect.js"></script>
@@ -22,7 +22,7 @@
 
     <!-- 2. Configure SystemJS -->
     <script>
-        System.import('app').catch(function(err){ console.error(err); location.reload(); });
+        System.import('app').catch(function(err){ console.error(err); /*location.reload();*/ });
       </script>
   </head>
   <!-- Used by the Angular router ... -->
