Improved function that resizes large title texts

--- a/app/main-frame/main-frame.html
+++ b/app/main-frame/main-frame.html
@@ -4,7 +4,7 @@
   <div class="icon-wrapper">
     <img class="icon" src="https://www.kth.se/polopoly_fs/1.77257!/KTH_Logotyp_RGB_2013-2.svg"/>
   </div>
-  <div class="main-header-title" id="title"><h1 id="title-text">{{ screenInfo.title }}</h1></div>
+  <div class="main-header-title" id="title"><h1 id="title-text" #titleText>{{ screenInfo.title }}</h1></div>
   <div class="main-header-clock"><h2>{{ clock }}</h2></div>
 </header>
 
