--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <!-- 2. Configure SystemJS -->
     <script>
-        System.import('app').catch(function(err){ console.error(err); location.reload(); });
+        System.import('app').catch(function(err){ console.error(err); /*location.reload();*/ });
       </script>
   </head>
   <!-- Used by the Angular router ... -->
